[gd_scene load_steps=8 format=3 uid="uid://dm1axku4x6xkn"]

[ext_resource type="Script" path="res://assets/scripts/smartEnemy.gd" id="1_qg36b"]
[ext_resource type="PackedScene" uid="uid://b573fvrle16td" path="res://assets/prefabs/Enemies and Players/enemyBullet.tscn" id="2_i5spd"]
[ext_resource type="Texture2D" uid="uid://bhkiduqfmpr0o" path="res://assets/Art/enemy_frame_1.png" id="3_yirbv"]
[ext_resource type="AudioStream" uid="uid://cpabedoep2iox" path="res://assets/sounds/gun.wav" id="4_6ukt5"]
[ext_resource type="Texture2D" uid="uid://bmyccvp7tay8k" path="res://assets/Art/enemy_frame_2.png" id="4_le4af"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4pe63"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_yirbv")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_le4af")
}, {
"duration": 1.0,
"texture": ExtResource("3_yirbv")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wj2rt"]
size = Vector2(195, 332)

[node name="smartEnemy" type="CharacterBody2D" groups=["enemies"]]
position = Vector2(1, 0)
script = ExtResource("1_qg36b")
enemyBullet = ExtResource("2_i5spd")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(103.5, 174.5)
scale = Vector2(0.964126, 0.652542)
sprite_frames = SubResource("SpriteFrames_4pe63")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(98.5, 168)
shape = SubResource("RectangleShape2D_wj2rt")

[node name="shootTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="enemyBulletSpawn" type="Marker2D" parent="."]
position = Vector2(175, 117)

[node name="waitTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_6ukt5")
volume_db = -21.55

[node name="immuneTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="shootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="waitTimer" to="." method="_on_wait_timer_timeout"]
